# EgoSim

./: README.md
continuous_simulation/scene_backend/egosim_state/: .gitignore  pyproject.toml  setup.py
continuous_simulation/scene_backend/egosim_state/configs/pipeline/: moge.yaml  moge2.yaml
continuous_simulation/scene_backend/egosim_state/egosim_state/: __init__.py
continuous_simulation/scene_backend/egosim_state/egosim_state/cli/: main.py
continuous_simulation/scene_backend/egosim_state/egosim_state/configs/pipeline/: default.yaml
continuous_simulation/scene_backend/egosim_state/egosim_state/configs/streams/: frame_dir_stream.yaml  raw_mp4_stream.yaml
continuous_simulation/scene_backend/egosim_state/egosim_state/ext/: __init__.py
continuous_simulation/scene_backend/egosim_state/egosim_state/ext/corr/: spatial_correlation_sampler.py
continuous_simulation/scene_backend/egosim_state/egosim_state/pipeline/: __init__.py  default.py  processors.py
continuous_simulation/scene_backend/egosim_state/egosim_state/slam/: interface.py  system.py
continuous_simulation/scene_backend/egosim_state/egosim_state/streams/: base.py  frame_dir_stream.py  raw_mp4_stream.py
continuous_simulation/scene_backend/egosim_state/egosim_state/utils/: depth.py  geometry.py  io.py  logging.py  model_paths.py  viser.py  visualization.py
continuous_simulation/scene_backend/egosim_state/envs/: requirements.txt
continuous_simulation/scene_backend/egosim_state/scripts/: download_dataset.py  download_priorda_weights.py  egosim_state_to_colmap.py  predict_phrases.py
(+92 files in other folders)
